# cppnew

./: LICENSE  README.md  build.sh  cppnew
template/: CMakeLists.txt  CMakePresets.json  main.cpp
